--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   firebase_auth: ^1.0.1
   provider: ^5.0.0
   image_picker: ^0.7.2+1
+  cloud_firestore: ^1.0.1
+  firebase_core: ^1.0.1
+  firebase_storage: ^8.0.0
 
 
 dev_dependencies:
